[package]
name = "helium-console-cli"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.2"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
config = "0.9"
serde =  "1"
serde_derive = "1"
serde_json = "1"