[package]
name = "helium-console-cli"
version = "0.1.8-alpha"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[[bin]]
name = "helium-console-cli"
path = "main.rs"

[dependencies]
structopt = { version = "0.3.2", default-features = false }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde =  "1"
serde_derive = "1"
serde_json = "1"
base64 = "0.11"
toml = "0.5"
prettytable-rs = "^0.8"
helium-console = { path = "../lib" }
