[package]
name = "helium-console-cli"
version = "0.1.8"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"
default-run = "helium-console-cli"

[[bin]]
name = "helium-console-cli"
path = "main.rs"

[dependencies]
structopt = { version = "0", default-features = false }
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde =  "1"
serde_derive = "1"
serde_json = "1"
base64 = "0"
toml = "0"
prettytable-rs = "^0.8"
helium-console = { path = "../lib" }
