[package]
name = "helium-console"
version = "0.1.8"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde =  "1"
serde_derive = "1"
serde_json = "1"
hex = "0"
base64 = "0"
uuid = "0"
oauth2 = "2"
url = "^1.7.2"
rand = "0"
