[package]
name = "ttn_service"
version = "0.1.0"
authors = ["lthiery <me@louisthiery.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
reset-router = "0.8"
tokio = { version = "0.2", features = ["full"] }
http = "0.2"
futures = "0.3"
helium-console = { path = "../lib" }
serde =  "1"
serde_derive = "1"
serde_json = "1"